# build-template

./: .gitmodules  DEVELOP.md  README.md
.github/workflows/: RUNNERS.md  build-rockchip-lean-openwrt.yml  build-rpi4-lean-openwrt.yml  docker-github-actions.xml  docker-github-actions.yml  docker-github-actions_v2.yml  rust.yml
Brain/Alpine/: README.md  README.me
Brain/Alpine/opencv/: README.md
Brain/Awareness/awareness-0.1.dist-info/: METADATA
Brain/Subcognition/: README.md
Brain/Subcognition/C++/: README.md
Brain/Subcognition/C++/CMake/: CMakeLists.txt
Brain/Subcognition/C++/src/: hello.cpp  hello.h  main.cpp
Brain/Subcognition/subcognition-0.1.dist-info/: METADATA  WHEEL  direct_url.json  top_level.txt
Brain/U-Boot/: README.md
Brain/home/: README.md
tools/: upgrade-ziloo
